# Auditable-Privacy-Payment

./: .gitmodules  README.md
audit-zero/: Cargo.toml
audit-zero/src/: commitment.rs  error.rs  keys.rs  lib.rs  merkle_tree.rs  nullifier.rs  poseidon.rs  snark.rs  storage.rs  structs.rs  utxo.rs
audit-zero/tests/: test.rs
payment/src/: audit.rs  audit_gadget.rs  audit_poseidon.rs  deposit.rs  lib.rs  nullifier.rs  snark.rs  structs.rs  utxo.rs  withdraw.rs
solidity/src/: Apa.sol
